--- a/index.html
+++ b/index.html
@@ -3,8 +3,17 @@
 <!-- A-Frame ライブラリの読み込み -->
 <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
 <!-- AR.js ライブラリの読み込み -->
-<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.5.0/aframe/build/aframe-ar.js"></script>
+<script src="https://cdn.rawgit.com/jeromeetienne/AR.js/1.6.2/aframe/build/aframe-ar.js"></script>
 <body style='margin:0px; overflow:hidden;'>
+    
+<!-- 作成したマーカーでのソース -->
+<a-marker type='pattern' url='./marker/pattern-marker.patt'>
+<a-sphere scale=".25 .25 .25" position="0 .5 0" color="#f00">
+  <a-animation attribute="position" to="0 1 0" direction="alternate" dur="2000" repeat="indefinite">
+  </a-animation>
+</a-sphere>
+</a-marker>
+    
 <!-- こっからA-Frame -->
 <a-scene embedded arjs="debugUIEnabled:false;trackingMethod:best;" vr-mode-ui="enabled: false">
     <!-- オブジェクトファイルとマテリアルファイルを読み込む -->
