--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     </a-marker>
     
     <!-- 作成したマーカーでのソース -->
-    <a-marker type='pattern' url='./marker/pattern-marker.patt'>
+    <a-marker type='pattern' url='marker/pattern-marker.patt'>
     <!--
     <a-sphere scale=".25 .25 .25" position="0 .5 0" color="#f00">
       <a-animation attribute="position" to="0 1 0" direction="alternate" dur="2000" repeat="indefinite">
