--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </a-assets>
 　　　　　　　　<!-- こっからARの世界。マーカー上になにを展開するかを書く -->
     <a-marker preset="hiro">
-        <a-obj-model id="texture_773079777641" src="#sample-obj" mtl="#sample-mtl" position="0 0 0" scale="0.5 0.5 0.5" rotation="0 0 0"></a-obj-model>
+        <a-obj-model id="008043758379" src="#sample-obj" mtl="#sample-mtl" position="0 0 0" scale="0.5 0.5 0.5" rotation="0 0 0"></a-obj-model>
         <a-text value="test" position="0 1.3 0" align="center"></a-text>
     </a-marker>
     
@@ -28,7 +28,7 @@
       </a-animation>
     </a-sphere>
     -->
-    <a-obj-model id="texture_773079777641" src="#sample-obj" mtl="#sample-mtl" position="0 0 0" scale="0.5 0.5 0.5" rotation="0 0 0"></a-obj-model>
+    <a-obj-model id="008043758379" src="#sample-obj" mtl="#sample-mtl" position="0 0 0" scale="0.5 0.5 0.5" rotation="0 0 0"></a-obj-model>
     </a-marker> 
     
     <!-- arなのでこんな感じでカメラが必要らしい。 -->
